--- a/sp5-chap08/build.gradle
+++ b/sp5-chap08/build.gradle
@@ -10,5 +10,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13.2'
+    compile 'org.springframework:spring-context:5.0.2.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.0.2.RELEASE'
+    compile 'org.apache.tomcat:tomcat-jdbc:8.0.49'
+    compile 'mysql:mysql-connector-java:5.1.45'
+    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile 'ch.qos.logback:logback-classic:1.2.3'
 }
